# Project_Amarket

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  start.bat  start.sh
.claude/agents/: news-analyst.md  news-classifier-realtime.md
.claude/commands/: test-premarket.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: agents.yml  app.yml  classification.yml  keywords.yml  sectors.yml
docs/: LOCAL_DEPLOYMENT.md  PROJECT_STATE.md
docs/peersession-source/: a_share_quant_project_timeline.docx  a_share_quant_project_timeline.extracted.txt  a_share_realtime_news_dashboard_prd.md
docs/sessions/: 2026-06-14-01-brainstorm-and-spec.md  2026-06-14-02-brainmaster-pattern-adoption.md  2026-06-19-03-merge-peersession-spec-v3.md  2026-06-19-04-phase1-m0-project-skeleton.md  2026-06-19-05-phase1-m1-data-foundation.md  2026-06-19-06-m2-rules-and-ai-providers.md  2026-06-19-07-ci-hotfix-and-m2-status.md  2026-06-21-08-m2-b-deduper.md  2026-06-21-09-classifier-scorer.md  2026-06-21-10-m2-complete.md  2026-06-24-11-brainmaster-fix-and-p1-backlog.md  2026-06-24-12-m3-brainstorm-and-m3a-pr1.md  2026-06-25-13-m3b-dashboard-api.md  2026-06-30-14-post-m3b-polish-and-agent-demo.md
docs/superpowers/plans/: 2026-06-24-m3a-pr1-frame-and-core.md  2026-06-25-m3b-dashboard-api.md
docs/superpowers/specs/: 2026-06-14-news-engine-design.md  2026-06-19-spec1-v3-merged.md  2026-06-24-m3a-poc-pages-design.md
poc/: README.md  index.html  news-detail.html  news.html  params.html  reports.html  sectors.html  serve.bat  serve.sh
poc/assets/css/: theme-cyberpunk.css  theme-okx.css
poc/assets/data/: alerts.json  dashboard.json  news-detail-126.json  news-detail-127.json  news-detail-128.json  news-detail-129.json  news-detail-130.json  news.json  params.json  reports.json  sectors.json
poc/assets/js/: nav.js  shared.js
poc/assets/js/pages/: index.js  news-detail.js  news.js  params.js  reports.js  sectors.js
scripts/: dump_poc_fixtures.py
src/amarket/: __init__.py  cli.py  main.py
src/amarket/adapters/: __init__.py
src/amarket/adapters/ai/: __init__.py  base.py  claude_agent_runner.py  factory.py  sdk_providers.py
src/amarket/adapters/market_sources/: __init__.py  akshare_source.py  base.py
src/amarket/adapters/news_sources/: __init__.py  base.py  eastmoney.py  sina.py  yahoo.py
src/amarket/adapters/notifiers/: __init__.py  base.py  lark_bot.py  wework_bot.py
src/amarket/api/: __init__.py  alerts.py  dashboard.py  dependencies.py  health.py  metrics.py  news.py  reports.py
src/amarket/core/: __init__.py  exceptions.py  logging.py
src/amarket/db/: __init__.py  session.py
src/amarket/db/migrations/: env.py  script.py.mako
src/amarket/db/migrations/versions/: 20260619_m0_users.py  2026_06_19_1012-10c107c08bc0_m1_phase1_schema_14_tables.py
src/amarket/domain/: __init__.py  enums.py  models.py  schemas.py
src/amarket/repositories/: __init__.py  alert_repo.py  base.py  market_snapshot_repo.py  news_analysis_repo.py  news_event_repo.py  news_repo.py  news_source_repo.py  report_repo.py  sector_trend_repo.py  source_health_repo.py
src/amarket/services/: __init__.py  config_service.py  notify_test.py  observability.py
src/amarket/services/dashboard/: __init__.py  market_data.py  sector_trend.py
src/amarket/services/news/: __init__.py  alert.py  analysis.py  classifier.py  collector.py  deduper.py  scorer.py
src/amarket/ui/: __init__.py  app.py
src/amarket/ui/pages/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_ai_providers.py  test_api_dashboard_m3b.py  test_api_endpoints.py  test_api_news_dashboard.py  test_api_reports.py  test_cli.py  test_config_service.py  test_dump_poc_fixtures.py  test_enums.py  test_logging_redaction.py  test_market_akshare.py  test_models.py  test_news_adapters.py  test_news_alert.py  test_news_analysis.py  test_news_classifier.py  test_news_collector.py  test_news_deduper.py  test_news_scorer.py  test_notifiers.py  test_notify_test_wrapper.py  test_observability.py  test_report_repo.py  test_repositories.py  test_sector_trend_repo.py  test_sector_trend_service.py  test_static_poc_mount.py
