[project]
name = "amarket"
version = "0.1.0"
description = "A 股新闻分析 + 行情看板平台（小组联合项目，永不实盘）"
readme = "README.md"
requires-python = ">=3.11,<3.15"
# license: 待定（小组内部项目，未选择许可证）— see README & CONTRIBUTING
authors = [
    { name = "Project_Amarket Team" },
]
keywords = ["a-shares", "news-analysis", "trading-dashboard", "fintech"]

dependencies = [
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "streamlit>=1.40,<2.0",

    # ORM + DB
    "sqlmodel>=0.0.22,<1.0",
    "alembic>=1.13,<2.0",

    # Scheduling
    "apscheduler>=3.10,<4.0",

    # HTTP client
    "httpx>=0.27,<1.0",

    # Logging
    "structlog>=24.0,<26.0",
    "loguru>=0.7,<1.0",

    # CLI
    "typer>=0.14,<1.0",

    # Data validation + config
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",

    # Templates
    "jinja2>=3.1,<4.0",

    # Calendar
    "chinese-calendar>=1.10,<2.0",

    # Deduplication
    "simhash>=2.1,<3.0",

    # Observability
    "prometheus-client>=0.21,<1.0",

    # Resilience
    "tenacity>=9.0,<10.0",

    # YAML + env
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",

    # HTML/RSS parsing (news sources)
    "lxml>=5.0,<6.0",
    "beautifulsoup4>=4.12,<5.0",
    "feedparser>=6.0,<7.0",

    # AI SDKs (Phase 1 主路径)
    "anthropic>=0.40,<1.0",
    "openai>=1.50,<3.0",  # DeepSeek 走 OpenAI 兼容协议
]

[project.optional-dependencies]
market-data = [
    # 行情数据源（M1 启动前安装）
    "akshare>=1.16,<2.0",
    "efinance>=0.5,<1.0",
    "yfinance>=0.2,<1.0",
]

[project.scripts]
amarket = "amarket.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "httpx>=0.27,<1.0",  # for pytest TestClient
    "respx>=0.22,<1.0",  # HTTP mock (httpx)
    "freezegun>=1.5,<2.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
    "types-pyyaml>=6.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amarket"]

# ============================================================
# Ruff (lint + format) - 见 https://docs.astral.sh/ruff/
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI / Typer 风格)
    "RUF001", # ambiguous unicode in string (中文标点)
    "RUF002", # ambiguous unicode in docstring (中文标点)
    "RUF003", # ambiguous unicode in comment (中文标点)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]
"src/amarket/db/migrations/**/*.py" = ["E402", "F401"]
"src/amarket/cli.py" = ["B008"]  # Typer Option 是 design 上的 default-call

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Mypy
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # fastapi/typer decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "efinance.*",
    "yfinance.*",
    "simhash.*",
    "feedparser.*",
    "apscheduler.*",
    "chinese_calendar.*",
    "loguru.*",
]
ignore_missing_imports = true

# Alembic autogenerated migrations 不参与 strict 类型检查
[[tool.mypy.overrides]]
module = "amarket.db.migrations.versions.*"
ignore_errors = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests (need network / real APIs, skip in default CI)",
    "e2e: end-to-end tests (slow, skip in default CI)",
    "slow: slow tests (> 1s)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
    # Starlette / FastAPI 推荐 httpx2，仍保留 httpx 即可
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["src/amarket"]
branch = true
omit = [
    "src/amarket/db/migrations/*",
    "src/amarket/ui/*",  # Streamlit UI 不参与覆盖率
    "src/amarket/cli.py",  # CLI 入口仅集成测试覆盖
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",  # protocol stubs
]
